[tool.poetry]
name = "agora-community-sdk"
version = "0.1.0"
description = "An SDK allowing the use of Agora SDK in python"
authors = ["samyak-jain <samtan106@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyppeteer = "^0.0.25"

[tool.poetry.dev-dependencies]
pysnooper = "^0.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
