[tool.poetry]
name = "agora-community-sdk"
version = "0.1.3"
description = "An SDK allowing the use of Agora SDK in python"
authors = ["samyak-jain <samtan106@gmail.com>"]
repository = "https://github.com/samyak-jain/AgoraPython"
homepage = "https://github.com/samyak-jain/AgoraPython"

[tool.poetry.dependencies]
python = "^3.6"
pyppeteer = "^0.0.25"

[tool.poetry.dev-dependencies]
mypy = "^0.701.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
